tests/core/ill-typed/extra-tests/unexpected_number_of_parameters_in_lambda/test-4.stella
language core;

extend with #multiparameter-functions;

fn mk_const(a : Nat) -> fn(Nat, Nat, Bool) -> Nat {
  return fn(x : Nat, y : Nat) { return a }
}

fn main (n : Nat) -> Nat {
  return mk_const(n)(0, 0, false)
}
